--- a/ProyectoFinal-Aplicada2/Pages/ConsultaProductos.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaProductos.razor
@@ -1,6 +1,27 @@
 ﻿@page "/ConsultaProductos"
 @page "/ConsultaProductos/{I:int}"
 
+@inject AuthenticationStateProvider AuthenticationStateProvider
+
+<CascadingAuthenticationState>
+    <AuthorizeView>
+        <NotAuthorized>
+            <div class="card text-center">
+                <div class="card-header">
+                    No Autorizado
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Atención</h5>
+                    <p class="card-text">Usted no esta autorizado para acceder a esta pagina.</p>
+                    <a href="MenuRegistros" class="btn btn-primary">Ir al Menú</a>
+                </div>
+                <div class="card-footer text-muted">
+                </div>
+            </div>
+        </NotAuthorized>
+    </AuthorizeView>
+</CascadingAuthenticationState>
+
 
 <h3>Consulta de Productos</h3>
 
@@ -108,7 +129,7 @@ else
     protected override void OnInitialized()
     {
         conteo = contexto.Productos.Count();
-        totaldepaginas = Math.Ceiling(conteo/paginacion.CantidadMostrar);
+        totaldepaginas = Math.Ceiling(conteo / paginacion.CantidadMostrar);
         Lista = productoscontrollers.GetList(A => true);
         this.Lista = contexto.Productos.Take(paginacion.CantidadMostrar).ToList();
         NumSaltar();
@@ -120,10 +141,10 @@ else
         Saltar();
     }
 
-     private void Saltar()
+    private void Saltar()
     {
         Contador += paginacion.Pagina;
-        if(Contador >= totaldepaginas)
+        if (Contador >= totaldepaginas)
         {
             Contador = 0;
         }
@@ -173,7 +194,7 @@ else
                     //Todos
                     case 0:
                         conteo = contexto.Productos.Count();
-                        totaldepaginas = Math.Ceiling(conteo/paginacion.CantidadMostrar);
+                        totaldepaginas = Math.Ceiling(conteo / paginacion.CantidadMostrar);
                         Lista = productoscontrollers.GetList(A => true);
                         this.Lista = contexto.Productos.Take(paginacion.CantidadMostrar).ToList();
                         break;
