--- a/ProyectoFinal-Aplicada2/Pages/ConultaVentas.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConultaVentas.razor
@@ -1,6 +1,26 @@
 ﻿@page "/ConsultaVentas"
 @page  "/ConsultaVentas/{I:int}"
 
+@inject AuthenticationStateProvider AuthenticationStateProvider
+
+<CascadingAuthenticationState>
+    <AuthorizeView>
+        <NotAuthorized>
+            <div class="card text-center">
+                <div class="card-header">
+                    No Autorizado
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Atención</h5>
+                    <p class="card-text">Usted no esta autorizado para acceder a esta pagina.</p>
+                    <a href="MenuRegistros" class="btn btn-primary">Ir al Menú</a>
+                </div>
+                <div class="card-footer text-muted">
+                </div>
+            </div>
+        </NotAuthorized>
+    </AuthorizeView>
+</CascadingAuthenticationState>
 
 <h3>Consulta de Ventas</h3>
 
@@ -83,7 +103,7 @@ else
 
     List<Ventas> Lista = new List<Ventas>();
 
-   
+
     [Parameter]
     public int I { get; set; }
     private int Contador { get; set; }
@@ -102,7 +122,7 @@ else
     private void Saltar()
     {
         Contador += paginacion.Pagina;
-        if(Contador >= totaldepaginas)
+        if (Contador >= totaldepaginas)
         {
             Contador = 0;
         }
@@ -115,7 +135,7 @@ else
     protected override void OnInitialized()
     {
         conteo = Contexto.Compras.Count();
-        totaldepaginas = Math.Ceiling(conteo/paginacion.CantidadMostrar);
+        totaldepaginas = Math.Ceiling(conteo / paginacion.CantidadMostrar);
         Lista = ventascontroller.GetList(p => true);
         this.Lista = Contexto.Ventas.Take(paginacion.CantidadMostrar).ToList();
         NumSaltar();
@@ -128,7 +148,7 @@ else
     DateTime hastaFecha = DateTime.Now;
     DateTime desdeFecha = DateTime.Now;
 
-    
+
     public List<Ventas> listado { get; set; }
 
 
@@ -143,7 +163,7 @@ else
 
             //wey klok
         }
-        
+
     }
 
     private void Filtrar()
@@ -160,7 +180,7 @@ else
                     //Todos
                     case 0:
                         conteo = Contexto.Compras.Count();
-                        totaldepaginas = Math.Ceiling(conteo/paginacion.CantidadMostrar);
+                        totaldepaginas = Math.Ceiling(conteo / paginacion.CantidadMostrar);
                         Lista = ventascontroller.GetList(p => true);
                         this.Lista = Contexto.Ventas.Take(paginacion.CantidadMostrar).ToList();
                         break;
