--- a/ProyectoFinal-Aplicada2/Pages/VentasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/VentasComponent.razor
@@ -5,15 +5,23 @@
 
 <CascadingAuthenticationState>
     <AuthorizeView>
-
-
         <NotAuthorized>
-            <p class="display-4 text-center">Usted no esta autorizado para acceder a esta pagina</p>
+            <div class="card text-center">
+                <div class="card-header">
+                    No Autorizado
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Atención</h5>
+                    <p class="card-text">Usted no esta autorizado para acceder a esta pagina.</p>
+                    <a href="MenuRegistros" class="btn btn-primary">Ir al Menú</a>
+                </div>
+                <div class="card-footer text-muted">
+                </div>
+            </div>
         </NotAuthorized>
-
     </AuthorizeView>
 </CascadingAuthenticationState>
->
+
 
 <style>
     * {
@@ -41,9 +49,6 @@
 
 @if (AuthenticationStateProvider.GetAuthenticationStateAsync().Result.User.Identity.IsAuthenticated)
 {
-
-
-
     <section class="form-register">
         <h3>Ventas</h3>
         <EditForm Model="@ventas" OnValidSubmit="Guardar">
