--- a/ProyectoFinal-Aplicada2/Menu/MenuRegistros.razor
+++ b/ProyectoFinal-Aplicada2/Menu/MenuRegistros.razor
@@ -7,7 +7,7 @@
             <div class="card-body">
                 <h5 class="card-title">Registro de Usuarios</h5>
                 <p class="card-text">Registro para agregar, modificar y eliminar Usuarios.</p>
-                <a href="Usuarios/0" class="btn btn-primary">Entrar</a>
+                <a href="Usuarios/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
             </div>
         </div>
     </div>
@@ -16,7 +16,7 @@
             <div class="card-body">
                 <h5 class="card-title">Registro de Productos</h5>
                 <p class="card-text">Registro para agregar, modificar y eliminar Productos.</p>
-                <a href="Productos/0" class="btn btn-primary">Entrar</a>
+                <a href="Productos/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
             </div>
         </div>
     </div>
@@ -28,7 +28,7 @@
             <div class="card-body">
                 <h5 class="card-title">Registro de Proveedores</h5>
                 <p class="card-text">Registro para agregar, modificar y eliminar Proveedores.</p>
-                <a href="Proveedores/0" class="btn btn-primary">Entrar</a>
+                <a href="Proveedores/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
             </div>
         </div>
     </div>
@@ -37,7 +37,7 @@
             <div class="card-body">
                 <h5 class="card-title">Registro de Compras</h5>
                 <p class="card-text">Registro para agregar, modificar y eliminar Comprara.</p>
-                <a href="Compras/0" class="btn btn-primary">Entrar</a>
+                <a href="Compras/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
             </div>
         </div>
     </div>
@@ -49,7 +49,7 @@
             <div class="card-body">
                 <h5 class="card-title">Registro de Pagos</h5>
                 <p class="card-text">Registro para agregar, modificar y eliminar Pagos.</p>
-                <a href="Pagos/0" class="btn btn-primary">Entrar</a>
+                <a href="Pagos/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
             </div>
         </div>
     </div>
@@ -58,7 +58,7 @@
             <div class="card-body">
                 <h5 class="card-title">Registro de Ventas</h5>
                 <p class="card-text">Registro para agregar, modificar y eliminar Ventas.</p>
-                <a href="Ventas/0" class="btn btn-primary">Entrar</a>
+                <a href="Ventas/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
             </div>
         </div>
     </div>
