--- a/ProyectoFinal-Aplicada2/Pages/ConsultaCompras.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaCompras.razor
@@ -1,6 +1,28 @@
 ﻿@page "/ConsultaCompras"
 @page "/ConsultaCompras/{I:int}"
 
+@inject AuthenticationStateProvider AuthenticationStateProvider
+
+<CascadingAuthenticationState>
+    <AuthorizeView>
+        <NotAuthorized>
+            <div class="card text-center">
+                <div class="card-header">
+                    No Autorizado
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Atención</h5>
+                    <p class="card-text">Usted no esta autorizado para acceder a esta pagina.</p>
+                    <a href="MenuRegistros" class="btn btn-primary">Ir al Menú</a>
+                </div>
+                <div class="card-footer text-muted">
+                </div>
+            </div>
+        </NotAuthorized>
+    </AuthorizeView>
+</CascadingAuthenticationState>
+
+
 <h3>Consulta de Compras</h3>
 
 <div class="form-row">
@@ -106,7 +128,7 @@ else
         try
         {
             conteo = contexto.Compras.Count();
-            totaldepaginas = Math.Ceiling(conteo/paginacion.CantidadMostrar);
+            totaldepaginas = Math.Ceiling(conteo / paginacion.CantidadMostrar);
             Lista = comprascontroller.GetList(p => true);
             this.Lista = contexto.Compras.Take(paginacion.CantidadMostrar).ToList();
             NumSaltar();
@@ -127,7 +149,7 @@ else
     private void Saltar()
     {
         Contador += paginacion.Pagina;
-        if(Contador >= totaldepaginas)
+        if (Contador >= totaldepaginas)
         {
             Contador = 0;
         }
@@ -175,7 +197,7 @@ else
                     //Todos
                     case 0:
                         conteo = contexto.Compras.Count();
-                        totaldepaginas = Math.Ceiling(conteo/paginacion.CantidadMostrar);
+                        totaldepaginas = Math.Ceiling(conteo / paginacion.CantidadMostrar);
                         Lista = comprascontroller.GetList(p => true);
                         this.Lista = contexto.Compras.Take(paginacion.CantidadMostrar).ToList();
                         break;
@@ -222,7 +244,7 @@ else
                     case 5:
                         {
 
-                            listado = comprascontroller.GetList(p => p.DescripcionCompra.Contains(Criterio));;
+                            listado = comprascontroller.GetList(p => p.DescripcionCompra.Contains(Criterio)); ;
                             Lista = listado;
                         }
                         break;
