--- a/ProyectoFinal-Aplicada2/Pages/ConsultaPagos.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaPagos.razor
@@ -1,37 +1,59 @@
 ﻿@page "/ConsultaPagos"
 @page  "/ConsultaPagos/{I:int}"
 
-    <h3>Consulta de Pagos</h3>
-    <div class="form-row">
+@inject AuthenticationStateProvider AuthenticationStateProvider
 
-        <div class="col">
-            <input id="desde_date" class="form-control" type="datetime-local" @bind="desdeFecha" />
-            <label for="desde_date">Desde</label>
-        </div>
-        <div class="col">
-            <input id="hasta_date" class="form-control" type="datetime-local" @bind="hastaFecha" />
-            <label for="hasta_date">Hasta</label>
-        </div>
+<CascadingAuthenticationState>
+    <AuthorizeView>
+        <NotAuthorized>
+            <div class="card text-center">
+                <div class="card-header">
+                    No Autorizado
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Atención</h5>
+                    <p class="card-text">Usted no esta autorizado para acceder a esta pagina.</p>
+                    <a href="MenuRegistros" class="btn btn-primary">Ir al Menú</a>
+                </div>
+                <div class="card-footer text-muted">
+                </div>
+            </div>
+        </NotAuthorized>
+    </AuthorizeView>
+</CascadingAuthenticationState>
 
-        <div class="col">
-            <button class="btn btn-primary" id="filtar_buton" @onclick="filtradoPorFecha">Filtar por Fecha</button>
-        </div>
 
-        <div class="col">
-            <button class="btn btn-dark" type="button" @onclick="Saltar">Pag. Siguiente</button>
-        </div>
-        <div class="col">
-            <input type="text" class="form-control" placeholder="Criterio" @onfocusin="Filtrar" @onfocusout="Filtrar" @onclick="Filtrar" @bind="Criterio" />
-        </div>
+<h3>Consulta de Pagos</h3>
+<div class="form-row">
 
-        <div class="col">
-            <select class="form-control" @onclick="Filtrar" @bind="filtro">
-                <option value="0">Todos</option>
-                <option value="1">Id</option>
-                <option value="2">PagoTotal</option>
-            </select>
-        </div>
+    <div class="col">
+        <input id="desde_date" class="form-control" type="datetime-local" @bind="desdeFecha" />
+        <label for="desde_date">Desde</label>
     </div>
+    <div class="col">
+        <input id="hasta_date" class="form-control" type="datetime-local" @bind="hastaFecha" />
+        <label for="hasta_date">Hasta</label>
+    </div>
+
+    <div class="col">
+        <button class="btn btn-primary" id="filtar_buton" @onclick="filtradoPorFecha">Filtar por Fecha</button>
+    </div>
+
+    <div class="col">
+        <button class="btn btn-dark" type="button" @onclick="Saltar">Pag. Siguiente</button>
+    </div>
+    <div class="col">
+        <input type="text" class="form-control" placeholder="Criterio" @onfocusin="Filtrar" @onfocusout="Filtrar" @onclick="Filtrar" @bind="Criterio" />
+    </div>
+
+    <div class="col">
+        <select class="form-control" @onclick="Filtrar" @bind="filtro">
+            <option value="0">Todos</option>
+            <option value="1">Id</option>
+            <option value="2">PagoTotal</option>
+        </select>
+    </div>
+</div>
 <br />
 
 
@@ -89,25 +111,25 @@ else
 
     protected override void OnInitialized()
     {
-     
+
         conteo = contexto.Pagos.Count();
-        totaldepaginas = Math.Ceiling(conteo/paginacion.CantidadMostrar);
+        totaldepaginas = Math.Ceiling(conteo / paginacion.CantidadMostrar);
         Lista = pagoscontroller.GetList(A => true);
         this.Lista = contexto.Pagos.Take(paginacion.CantidadMostrar).ToList();
         NumSaltar();
     }
 
 
-     private void NumSaltar()
+    private void NumSaltar()
     {
         Contador = I - 1;
         Saltar();
     }
 
-     private void Saltar()
+    private void Saltar()
     {
         Contador += paginacion.Pagina;
-        if(Contador >= totaldepaginas)
+        if (Contador >= totaldepaginas)
         {
             Contador = 0;
         }
@@ -157,7 +179,7 @@ else
                     //Todos
                     case 0:
                         conteo = contexto.Pagos.Count();
-                        totaldepaginas = Math.Ceiling(conteo/paginacion.CantidadMostrar);
+                        totaldepaginas = Math.Ceiling(conteo / paginacion.CantidadMostrar);
                         Lista = pagoscontroller.GetList(A => true);
                         this.Lista = contexto.Pagos.Take(paginacion.CantidadMostrar).ToList();
                         break;
