--- a/ProyectoFinal-Aplicada2/Shared/NavMenu.razor
+++ b/ProyectoFinal-Aplicada2/Shared/NavMenu.razor
@@ -25,7 +25,7 @@
             </NavLink>
         </li>
 
-        @*<li class="nav-item px-3">
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="ConsultaUsuarios">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Usuarios
             </NavLink>
@@ -54,7 +54,7 @@
             <NavLink class="nav-link" href="ConsultaPagos">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Pagos
             </NavLink>
-        </li>*@
+        </li>
 
     </ul>
     </div>
